--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,3 +1,7 @@
+html,
+body {
+    overflow: hidden;
+}
 .main {
     max-width: 1500px;
     background-color: #dddddd;
@@ -55,6 +59,4 @@
     text-align: center;
     margin-top: 10px;
 }
-.error {
-    color:red;
-}
+
