--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -1,3 +1,6 @@
+html,body {
+    overflow: hidden;
+}
 .main {
     max-width: 1500px;
     background-color: #dddddd;
@@ -5,7 +8,7 @@
 }
 .main__inner {
     text-align: center;
-    padding-top: 70px;
+    padding-top: 30px;
 }
 .main__title-p {
     font-size: 20px;
@@ -75,5 +78,9 @@
     margin-top: 10px;
 }
 .error {
-    color:red;
+    color:red
+}
+.error-title {
+    text-align: center;
+    color: red;
 }
