任意のメッセージ

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -27,6 +27,11 @@ text-align: center;
     height: 200px;
     font-size: 20px;
 }
+.work__button {
+    display: flex;
+    justify-content: center;
+}
+
 .end__button {
     width: 400px;
     height: 200px;
